<resources>
    <string name="app_name">RecetApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="email_label">Correo electronico</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello World</string>
    <string name="password_label">Contraseña</string>
    <string name="forgot_password">¿Olvidaste la contraseña?</string>
    <string name="login_label">Ingresar</string>
    <string name="no_account_label">No tengo cuenta</string>
    <string name="sign_up_label">¡Registrate Ahora!</string>
    <string name="singup_label">Crear cuenta</string>
    <string name="account_label">Tengo una cuenta</string>
    <string name="login_singup_label">¡Iniciar Sesion!</string>
    <string name="name_label">Nombres</string>
    <string name="male_label">Masculino</string>
    <string name="female_label">Femenino</string>
    <string name="other_label">Otro</string>
    <string name="forgot_label_button">Cambiar contraseña</string>
</resources>