<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:cardElevation="@dimen/card_elevation"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email_label"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:hint="@string/password_label"
                app:layout_constraintTop_toBottomOf="@id/login_email_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/small_margin"
                app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_forgot_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:padding="@dimen/small_margin"
                android:text="@string/forgot_password"
                android:textColor="@color/secondaryLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_password_layout"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_card"
        app:layout_constraintBottom_toTopOf="@id/login_to_signup"
        android:text="@string/login_label"
        android:fontFamily="@font/roboto_bold"
        app:backgroundTint="@color/secondaryDark"
        android:layout_marginHorizontal="@dimen/default_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forgot_text"
        app:layout_constraintTop_toTopOf="@id/login_to_signup"
        app:layout_constraintBottom_toBottomOf="@id/login_to_signup"
        app:layout_constraintRight_toLeftOf="@id/login_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/no_account_label"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/secondaryDark"
        android:layout_marginEnd="@dimen/small_margin"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_marginBottom="@dimen/default_margin"
        android:id="@+id/login_to_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintLeft_toRightOf="@id/forgot_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="start"
        android:layout_marginStart="@dimen/small_margin"
        android:text="@string/sign_up_label"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/secondaryLight"/>

</androidx.constraintlayout.widget.ConstraintLayout>